--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -13,6 +13,7 @@
   font-weight: 500;
   gap: 10px;
   padding-left: 116px;
+  margin-right: 20px;
 }
 
 .clothes__button {
@@ -32,10 +33,48 @@
 .clothes__section-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(328px, auto);
+  grid-auto-rows: minmax(200px, auto);
   margin: 0;
   padding-left: 116px;
+  padding-right: 20px;
   list-style-type: none;
   gap: 20px;
   position: relative;
+}
+
+@media screen and (max-width: 1200px) {
+  .clothes__section-caption {
+    padding-left: 40px;
+  }
+  
+  .clothes__section-list {
+    padding-left: 40px;
+    gap: 15px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .clothes__section-caption {
+    padding-left: 20px;
+  }
+  
+  .clothes__section-list {
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 20px;
+    gap: 15px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .clothes__section-caption {
+    padding-left: 10px;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .clothes__section-list {
+    grid-template-columns: 1fr;
+    padding-left: 10px;
+    gap: 10px;
+  }
 }
